--- a/src/main/webapp/swagger/index.html
+++ b/src/main/webapp/swagger/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://127.0.0.1:8081/SpringMVC/api-docs";
+        url = "http://127.0.0.1:9999/api-docs";
       }
 
       hljs.configure({
